# n8n-to-python

./: .dockerignore  .env  .env.example  .gitignore  43nodes bees new.json  AGENTS.md  AGENT_ARCHITECTURE_CANONICAL_PLAN.txt  CODEBASE_CLEANUP_TRACKER.txt  README.md  compose.yaml  pyproject.toml
codereview agent communication/: chat.txt
data/: beecore.next-draft.ttl  beecore.ttl  reingest-manifest.json
data/evaluation/: bee_queries.json  (+11 more)
docker/: api.Dockerfile  worker.Dockerfile
docs/: admin-react-migration.md  agent-build-log.md  agent-design.md  agent-next-pass-review.md  agent-runtime-technical.md  database-schema.md  deep-failure-scan-20260330.md  final-ingest-checklist-20260407.md  finish-pipeline-plan.md  frontend-tenant-architecture.md  ingestion-architecture.md  ontology-next-draft-notes.md  ontology-revision-notes.md  post-ingest-validation-runbook.md  pre-kg-implementation-backlog.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
scripts/: scan_hardcoded_secrets.py  verify_architecture_completion.py
sql/: identity_schema.sql  schema.sql
src/: __init__.py
tests/: conftest.py  test_agent.py  test_api.py  test_architecture_boundaries.py  test_chunking.py  test_kg.py  test_offline_pipeline.py  test_pipeline.py  test_public_auth.py  test_repository.py  test_service.py
tools/: continue_interrupted_reingest.py  reingest_all_pdfs.py  start_reingest_runner.ps1  stop_reingest_runner.ps1  wait_then_rerun_with_live_ontology.py
(+204 files in other folders)
